--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,34 @@
 #result {
 display: none;
 }
+
+.sync {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+  }
+
+h1 {
+  font-family:"Archivo Black", sans-serif;
+  text-align: center;
+  color: rgb(253, 45, 45);
+  font-size: 60px;
+}
+
+.form{
+  text-align: center;
+  padding: 20px;
+}
+
+html body {
+  background-image: url("http://www.graphicine.com/wp-content/uploads/2016/04/00_15_4100052.png");
+}
+
+.robot {
+  
+}
+
+#number{
+  color: aqua;
+}
