--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,30 @@ display: none;
     margin-left: auto;
     margin-right: auto;
     width: 60%;
-  }
+}
+.sync2{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+  
+#sync2{
+  display: none;
+}
 
 h1 {
   font-family:"Archivo Black", sans-serif;
   text-align: center;
   color: rgb(253, 45, 45);
   font-size: 60px;
+}
+
+h2 {
+  font-family:"Archivo Black", sans-serif;
+  text-align: center;
+  color: rgb(253, 45, 45);
+  font-size: 30px;
 }
 
 .form{
@@ -25,10 +42,27 @@ html body {
   background-image: url("http://www.graphicine.com/wp-content/uploads/2016/04/00_15_4100052.png");
 }
 
-.robot {
-  
+input {
+  background-color: rgb(253, 45, 45);
+  color: aliceblue;
 }
 
-#number{
-  color: aqua;
+button {
+  background-color: rgb(253, 45, 45);
+  color: aliceblue;
+  font-family: "Archivo Black", sans-serif;
+}
+#output {
+  text-align: center;
+  color: aliceblue;
+  font-size: 20px;
+  font-family: "Archivo Black", sans-serif;
+  padding: 20px;
+}
+p {
+  text-align: center;
+  color: aliceblue;
+  font-size: 20px;
+  font-family: "Archivo Black", sans-serif;
+  padding: 20px;
 }
